remove the gl namespace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,39 +12,53 @@ find_package(imgui CONFIG REQUIRED)
 find_package(tinyobjloader CONFIG REQUIRED)
 
 set(HEADERS 
+	"include/graal/detail/gl_handle.hpp" 
+ "include/graal/detail/dependent_false.hpp" 
+ "include/graal/detail/image_impl.hpp" 
+ "include/graal/detail/named_object.hpp"
+ "include/graal/detail/image_resource.hpp"
+ "include/graal/detail/virtual_resource.hpp" 
+ "include/graal/detail/task.hpp"
 	"include/graal/queue.hpp" 
 	"include/graal/image.hpp" 
 	"include/graal/accessor.hpp" 
-	"include/graal/buffer.hpp" 
-	"include/graal/gl/handle.hpp" 
-	"include/graal/gl/glad.h" 
-	"include/graal/gl/khrplatform.h" 
-	"include/graal/gl/handle.hpp" 
-	"include/graal/gl/texture.hpp" 
-	"include/graal/gl/types.hpp" 
-	"include/graal/gl/format_info.hpp" 
+	"include/graal/glad.h" 
+	"include/graal/khrplatform.h" 
+	"include/graal/texture.hpp" 
+	"include/graal/gl_types.hpp" 
+	"include/graal/gl_format_info.hpp" 
 	"include/graal/image_format.hpp" 
 	"include/graal/errors.hpp"
  "include/graal/visibility.hpp" 
  "include/graal/range.hpp" 
- "include/graal/detail/dependent_false.hpp" 
- "include/graal/detail/image_impl.hpp" 
  "include/graal/access_mode.hpp" 
  "include/graal/target.hpp"
- "include/graal/detail/named_object.hpp"
- "include/graal/image_type.hpp" "include/graal/detail/image_resource.hpp" "include/graal/detail/virtual_resource.hpp" "include/graal/gl/buffer.hpp" "include/graal/event.hpp" "include/graal/detail/task.hpp")
+ "include/graal/image_type.hpp" 
+ "include/graal/raw_buffer.hpp" 
+ "include/graal/event.hpp" 
+ "include/graal/program.hpp" 
+ "include/graal/shader.hpp" 
+ "include/graal/allow_flags.hpp" 
+ "include/graal/flags.hpp" 
+ "include/graal/flagsfwd.hpp"
+ "include/graal/flags_iterator.hpp")
 
 set(SOURCES
 	"src/queue.cpp" 
 	"src/buffer.cpp" 
 	"src/image.cpp" 
 	"src/image_format.cpp" 
-	"src/gl/format_info.cpp"
-	"src/gl/texture.cpp"
-	"src/gl/glad.c"
+	"src/gl_format_info.cpp"
+	"src/texture.cpp"
+	"src/glad.c"
 	"src/image_format.cpp"  
 	"src/errors.cpp"
-	 "src/gl/debug_output.cpp" "src/detail/image_resource.cpp" "src/detail/virtual_resource.cpp" "src/gl/buffer.cpp")
+	 "src/debug_output.cpp"
+	 "src/shader.cpp"
+	 "src/detail/image_resource.cpp"
+	 "src/detail/virtual_resource.cpp" 
+	 "src/raw_buffer.cpp" 
+	 "src/program.cpp")
 
 # Add source to this project's executable.
 add_library (graal STATIC ${SOURCES} ${HEADERS})
