--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,16 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("graal")
 
+include(FindVulkan)
+
 find_package(fmt REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(tinyobjloader CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
+find_package(assimp CONFIG REQUIRED)
+find_package(unofficial-vulkan-memory-allocator CONFIG REQUIRED)
 
 set(HEADERS 
 	"include/graal/detail/gl_handle.hpp" 
@@ -17,10 +22,10 @@ set(HEADERS
  "include/graal/detail/image_impl.hpp" 
  "include/graal/detail/named_object.hpp"
  "include/graal/detail/image_resource.hpp"
- "include/graal/detail/virtual_resource.hpp" 
+ "include/graal/detail/resource.hpp" 
  "include/graal/detail/task.hpp"
-	"include/graal/queue.hpp" 
-	"include/graal/image.hpp" 
+ "include/graal/queue.hpp" 
+ "include/graal/image.hpp" 
 	"include/graal/accessor.hpp" 
 	"include/graal/glad.h" 
 	"include/graal/khrplatform.h" 
@@ -32,7 +37,7 @@ set(HEADERS
  "include/graal/visibility.hpp" 
  "include/graal/range.hpp" 
  "include/graal/access_mode.hpp" 
- "include/graal/target.hpp"
+ "include/graal/image_usage.hpp"
  "include/graal/image_type.hpp" 
  "include/graal/raw_buffer.hpp" 
  "include/graal/event.hpp" 
@@ -41,7 +46,14 @@ set(HEADERS
  "include/graal/allow_flags.hpp" 
  "include/graal/flags.hpp" 
  "include/graal/flagsfwd.hpp"
- "include/graal/flags_iterator.hpp" "include/graal/vertex_array.hpp" "include/graal/data_type.hpp" "include/graal/sampler.hpp")
+ "include/graal/flags_iterator.hpp"
+ "include/graal/vertex_array.hpp" 
+ "include/graal/data_type.hpp" 
+ "include/graal/sampler.hpp"
+ # extensions
+ "include/graal/ext/scene.hpp"
+ "include/graal/ext/vertex_array_cache.hpp" 
+ "include/graal/ext/vertex_traits.hpp" "include/graal/ext/geometry.hpp" "include/graal/device.hpp" "include/graal/detail/vk_image.hpp")
 
 set(SOURCES
 	"src/queue.cpp" 
@@ -56,9 +68,9 @@ set(SOURCES
 	 "src/debug_output.cpp"
 	 "src/shader.cpp"
 	 "src/detail/image_resource.cpp"
-	 "src/detail/virtual_resource.cpp" 
+	 "src/detail/resource.cpp" 
 	 "src/raw_buffer.cpp" 
-	 "src/program.cpp" "src/vertex_array.cpp")
+	 "src/program.cpp" "src/vertex_array.cpp" "src/ext/scene.cpp" "src/device.cpp")
 
 # Add source to this project's executable.
 add_library (graal STATIC ${SOURCES} ${HEADERS})
@@ -67,25 +79,34 @@ target_include_directories(graal PRIVATE "src")
 target_include_directories(graal PUBLIC "include")
 target_compile_features(graal PUBLIC cxx_std_20)
 target_compile_definitions(graal PRIVATE 
-	GRAAL_TRACE_RESOURCES 
-	GRAAL_TRACE_BATCH_SUBMIT)
+		GRAAL_TRACE_RESOURCES 
+		GRAAL_TRACE_BATCH_SUBMIT
+	PUBLIC
+		VULKAN_HPP_NO_STRUCT_CONSTRUCTORS
+	)
+	
 target_compile_options(graal PUBLIC /permissive- /std:c++latest)
 target_link_libraries(graal 
 	PUBLIC 
+		Vulkan::Vulkan
 		fmt::fmt
 		OpenGL::GL
+		# Extension-only
+		glm
+		tinyobjloader::tinyobjloader
+	PRIVATE
+		unofficial::vulkan-memory-allocator::vulkan-memory-allocator
 	)
 
 
 add_executable(graal-test 
 	"tests/imgui_impl_opengl3.cpp"
 	"tests/imgui_impl_glfw.cpp"
-	"tests/main.cpp"
-)
+	"tests/main.cpp"  )
 
 target_link_libraries(graal-test PRIVATE 
 	graal
+	Vulkan::Vulkan
 	imgui::imgui
-	tinyobjloader::tinyobjloader
 	glfw)
 
