--- a/tools/shadergen/CMakeLists.txt
+++ b/tools/shadergen/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(graal-shadergen "main.cpp")
 
-target_link_libraries(graal-shadergen PRIVATE graal Vulkan::Vulkan glslang
+target_link_libraries(graal-shadergen PRIVATE graal Vulkan::Vulkan glslang Boost::program_options
                                               SPIRV)
