--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,6 @@ set(HEADERS
     "include/graal/detail/dependent_false.hpp"
     "include/graal/detail/image_impl.hpp"
     "include/graal/detail/named_object.hpp"
-    "include/graal/detail/image_resource.hpp"
     "include/graal/detail/resource.hpp"
     "include/graal/detail/task.hpp"
     "include/graal/queue.hpp"
@@ -39,10 +38,7 @@ set(HEADERS
     "include/graal/event.hpp"
     "include/graal/program.hpp"
     "include/graal/shader.hpp"
-    "include/graal/allow_flags.hpp"
-    "include/graal/flags.hpp"
-    "include/graal/flagsfwd.hpp"
-    "include/graal/flags_iterator.hpp"
+    "include/graal/bitmask.hpp"
     "include/graal/vertex_array.hpp"
     "include/graal/data_type.hpp"
     "include/graal/sampler.hpp"
